# camerata-orchestrator

./: .env.example  .gitignore  .overnight-decisions_needed.md  AGENTS.md  CONVENTIONS.md  Cargo.toml  README.md
crates/agent/: Cargo.toml
crates/agent/src/: generic.rs  lib.rs  liveness.rs  post_story_hook.rs  session.rs
crates/api-types/: Cargo.toml
crates/api-types/src/: credentials.rs  feedback.rs  governance.rs  lib.rs  lifecycle.rs  llm.rs  model_registry.rs  project.rs  run.rs  stories.rs  uow.rs  workitems.rs
crates/app-core/: Cargo.toml
crates/app-core/src/: checkpoint.rs  escalation.rs  lib.rs  lifecycle.rs  project.rs  prompt_kernel.rs  prompt_layers.rs  readiness.rs  routine.rs  run.rs  schedule.rs  uow.rs
crates/checks/: Cargo.toml
crates/checks/src/: architectural.rs  lib.rs  manifest.rs  manifest_runner.rs  multilang.rs  parse.rs  subprocess.rs  vcs_action.rs  verification_gate.rs
crates/checks/src/integration/: engine.rs  extractor.rs  gate.rs  mod.rs  vocab.rs
crates/checks/tests/: fmt_real_subprocess.rs  integration_gate_e2e.rs  vcs_action_gate_e2e.rs
crates/cli/: Cargo.toml
crates/cli/src/: acceptance.rs  build_demo.rs  deploy_demo.rs  eval_cmd.rs  fleet_support.rs  gate_probe.rs  http_cmd.rs  lib.rs  live_demo.rs  main.rs  maintenance_demo.rs  po_demo.rs  projects_live.rs  worktracker_demo.rs  worktracker_live.rs
crates/cli/tests/: acceptance.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: coordinator.rs  fleet.rs  lib.rs  liveness.rs
crates/core/tests/: coordinator_real_check.rs  fleet_real_check.rs  provider_neutrality.rs
crates/deploy/: Cargo.toml
crates/deploy/src/: artifact.rs  azure.rs  gate.rs  lib.rs  local.rs  outcome.rs  slug.rs  target.rs
crates/fleet/: Cargo.toml
crates/fleet/src/: gate_probe.rs  lib.rs  orchestrator.rs  tier.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: delegate.rs  fan_out.rs  integration_gate.rs  lib.rs  main.rs
crates/gateway/tests/: mcp_gated_write_deny.rs
crates/intake/: Cargo.toml
crates/intake/src/: appearance.rs  clarify.rs  engine.rs  form.rs  lib.rs  plan.rs  project.rs  refinement.rs  review.rs  sharing.rs  story.rs
crates/liveness/: Cargo.toml
crates/liveness/src/: lib.rs  probe.rs  tracker.rs
crates/llm/: Cargo.toml
crates/llm/src/: credentials.rs  lib.rs  llm.rs  usage_ledger.rs
crates/maintenance/: Cargo.toml
crates/maintenance/src/: finding.rs  lib.rs  plan.rs  rotation.rs  scan.rs  warning.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  main.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: lib.rs  secrets.rs  spec.rs  turn.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: artifacts.rs  enforcement_catch.rs  error.rs  feedback.rs  governance_event.rs  lib.rs  model.rs  orchestrator_decision.rs  store.rs
crates/preview/: Cargo.toml  README.md
crates/preview/src/: lib.rs  parser.rs  process.rs  status.rs  verify.rs
crates/rules/: Cargo.toml
crates/rules/principles/agentic/: agentic-no-test-tamper-1.toml  orch-autocalls-ledger-1.toml  orch-budget-monitor-1.toml  orch-clear-winner-1.toml  orch-conflicting-robustness-1.toml  orch-conformance-1.toml  orch-context-override-1.toml  orch-env-gated-quality-1.toml  orch-model-tiering-1.toml  orch-new-path-tests-1.toml  orch-no-natural-break-1.toml  orch-novelty-1.toml  orch-one-way-door-1.toml  orch-output-digest-1.toml  orch-precision-recall-1.toml  orch-prereview-1.toml  orch-reviewer-split-1.toml  orch-tiered-escalation-1.toml  orch-training-cutoff-1.toml  proc-story-docs-1.toml
crates/rules/principles/api-layer/: arch-api-dtos-1.toml  arch-api-versioning-1.toml  arch-boundary-validation-1.toml  arch-cursor-pagination-1.toml  arch-exact-decimals-1.toml  arch-explicit-tx-1.toml  arch-handler-no-db-1.toml  arch-hot-read-cache-1.toml  arch-idempotency-keys-1.toml  arch-middleware-first-1.toml  arch-no-cross-boundary-imports-1.toml  arch-repo-per-aggregate-1.toml  arch-repo-returns-domain-1.toml  arch-service-di-1.toml  arch-strict-layering-1.toml  arch-structured-errors-1.toml  (+2 more)
crates/rules/src/: lib.rs
crates/scaffold/: Cargo.toml
crates/scaffold/src/: custom_rules.rs  error.rs  lib.rs  outcome.rs  requirements.rs  skeleton.rs  strategy.rs  substitution.rs
crates/server/: Cargo.toml
crates/server/src/: ai_audit.rs  api_agent_driver.rs  arm.rs  auto_fire.rs  checkpoint.rs  clarify.rs  clarify_resume.rs  connections.rs  create_app.rs  credentials.rs  decompose.rs  dep_audit.rs  dev_implement_run.rs  draft.rs  enforcement_ledger.rs  escalation.rs  eval.rs  evidence.rs  feature_flags.rs  fix.rs  github_issues.rs  grounding.rs  investigation_run.rs  jobs.rs  lib.rs  live_fleet.rs  llm.rs  main.rs  model_profile_cascade.rs  model_registry.rs  model_tier.rs  notify.rs  onboard.rs  orchestrator_message.rs  pr.rs  pr_resolve_run.rs  project.rs  provider.rs  rate_limit.rs  reconcile.rs  (+23 more)
crates/server/tests/: escalation_flow_e2e.rs  governed_dev_run_e2e.rs  model_selection_e2e.rs  onboarding_flow_e2e.rs  onboarding_full_e2e.rs  project_export_import_e2e.rs  uow_lifecycle_e2e.rs  vcs_action_gate_e2e.rs
crates/ui/: Cargo.toml
crates/ui-core/: Cargo.toml
crates/ui-core/src/: designs.rs  git.rs  govdev.rs  lib.rs  llm_backend.rs  models.rs  readiness.rs  rules.rs  run.rs  scan.rs  schedule.rs  triage.rs
crates/ui/docs/: USER_GUIDE.md
crates/ui/src/: agent_activity.rs  app_state.rs  bombe.rs  bombe_bg.rs  build_run.rs  chat.rs  cockpit.rs  credentials.rs  data.rs  deploy_run.rs  design.rs  lib.rs  loading.rs  main.rs  maintenance_run.rs  md.rs  readiness_gate.rs  routines.rs  server_process.rs  style.rs  terminal.rs  toast.rs  vcs_settings.rs  workspace.rs
crates/worktracker/: Cargo.toml
crates/worktracker/src/: azure_devops.rs  clarify_bridge.rs  clarify_marker.rs  github.rs  github_projects.rs  http.rs  investigation.rs  jira.rs  lib.rs  sync.rs
crates/worktracker/tests/: tier1_flow.rs
tools/corpus-verifier/: Cargo.toml  README.md
tools/corpus-verifier/src/: lib.rs  main.rs
(+653 files in other folders)
