[workspace]
resolver = "2"
members = [
    "crates/core",        # orchestrator brain: roles, tasks, DAG, coordination (zero model calls)
    "crates/intake",      # PO-mode: intake form schema + LeadEngineer (architect-abstracted second level)
    "crates/gateway",     # layer-1 real-time governance gate: Rust MCP server (VERIFIED)
    "crates/agent",       # agent runtime: drives `claude -p` subprocesses, parses stream-json
    "crates/rules",       # rule corpus loader, enforcement_kind, rule-subset selection
    "crates/persistence", # SQLite state + JSON provenance
    "crates/checks",      # layer-2 post-task gate: CheckRunner + ESLint subprocess
    "crates/fleet",       # reusable governed-fleet build logic (used by CLI + UI)
    "crates/server",      # Axum HTTP/WS the cockpit talks to (embedded in orchestrator)
    "crates/cli",         # binary entrypoint wiring it all together
    "crates/ui",          # Dioxus cockpit (separate process)
    "crates/worktracker", # WorkItemProvider port: canonical shapes, sync policy, native provider
    "crates/maintenance", # Tier-2 standing post-publish ops agent (upgrades, security, rotation)
    "crates/deploy",      # Tier-2 BYO-infra publish: DeployTarget seam + local + Azure adapter
]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# The bar is "no warnings" (enforced via -D warnings in CI). The restriction
# lints below are tracked-but-not-yet-denied (e.g. unwrap_used across ~222 sites);
# do NOT add them as deny/warn here, it would break the -D warnings gate.

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Zachary Ernst"]

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
