[workspace]
resolver = "2"
members = [
    "crates/liveness",    # leaf crate: LivenessTracker + mtime probe + HeartbeatFn (no camerata deps)
    "crates/core",        # orchestrator brain: roles, tasks, DAG, coordination (zero model calls)
    "crates/app-core",    # framework-agnostic backend app-orchestration (RUST-HEADLESS-CORE-1); no axum dep
    "crates/intake",      # PO-mode: intake form schema + LeadEngineer (architect-abstracted second level)
    "crates/gateway",     # layer-1 real-time governance gate: Rust MCP server (VERIFIED)
    "crates/agent",       # agent runtime: drives `claude -p` subprocesses, parses stream-json
    "crates/rules",       # rule corpus loader, enforcement_kind, rule-subset selection
    "crates/persistence", # SQLite state + JSON provenance
    "crates/checks",      # layer-2 post-task gate: CheckRunner + ESLint subprocess
    "crates/fleet",       # reusable governed-fleet build logic (used by CLI + UI)
    "crates/server",      # Axum HTTP/WS the cockpit talks to (embedded in orchestrator)
    "crates/cli",         # binary entrypoint wiring it all together
    "crates/ui",          # Dioxus cockpit (separate process)
    "crates/worktracker", # WorkItemProvider port: canonical shapes, sync policy, native provider
    "crates/maintenance", # Tier-2 standing post-publish ops agent (upgrades, security, rotation)
    "crates/deploy",          # Tier-2 BYO-infra publish: DeployTarget seam + local + Azure adapter
    "crates/linter-registry", # citation validator: canonical linter rule-id lists + corpus scan report
    "tools/corpus-verifier",  # MAINTAINER-ONLY repo-governance tool: promote rules grounded -> verified via branch + PR. NOT part of the shipped app; never a dependency of any app crate.
]

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# unwrap_used is now denied workspace-wide. clippy.toml sets allow-unwrap-in-tests = true
# so #[test] fns and #[cfg(test)] modules are exempt. Integration tests under
# crates/*/tests/ carry a file-level #![allow(clippy::unwrap_used)] for the same reason.
# The remaining frontier (pedantic, expect_used, panic) is tracked in the strict-frontier
# CI job but is not yet denied here.
unwrap_used = "deny"

[workspace.package]
edition = "2021"
# Source-available, noncommercial. Deliberately NOT permissive: the code is fully
# readable, but commercial / competing use is reserved to the copyright holder. You
# can always loosen a license later; you cannot tighten one already shipped, so this
# starts reserved. See LICENSE.
license = "PolyForm-Noncommercial-1.0.0"
authors = ["Zachary Ernst"]

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures = "0.3"
thiserror = "2"
async-trait = "0.1"
# Disk-space query (a single statvfs call) — used by the disk-headroom preflight guard
# (Decision: 2026-06-22_dogfood_disk_safety). Deliberately a workspace dep so server,
# checks, and agent can all share the same version without version skew.
fs2 = "0.4"
# Gitignore-aware directory walker (ripgrep's ignore crate). Used by the brownfield
# local-scan path to skip gitignored files (feature: scan-hygiene). A workspace dep so
# the version is pinned in one place; only server consumes it today.
ignore = "0.4"
# SHA-256 for the enforcement-catch-ledger content_hash. Preimage-resistant so the
# ledger stays safe to share/port as proof (a hashed code slice that MIGHT contain a
# secret cannot be brute-forced back). Workspace dep so gateway + persistence agree.
sha2 = "0.10"
