[package]
name = "camerata-agent"
edition.workspace = true
license.workspace = true
authors.workspace = true
version = "0.0.0"

[dependencies]
camerata-core = { path = "../core" }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
