[package]
name = "camerata-agent"
edition.workspace = true
license.workspace = true
authors.workspace = true
version = "0.0.0"

[lints]
workspace = true

[dependencies]
camerata-core = { path = "../core" }
camerata-worktracker = { path = "../worktracker" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["clock"] }

[dev-dependencies]
tempfile = "3"
