[package]
name = "camerata-app-core"
edition.workspace = true
version = "0.0.0"

[lints]
workspace = true

# Framework-agnostic backend app-orchestration logic (RUST-HEADLESS-CORE-1 + RUST-PURE-STATE-
# TRANSITIONS-1), the backend twin of `camerata-ui-core`. This crate owns the stateless domain
# types + pure state transitions that `crates/server` (the Axum adapter) drives; it MUST NOT depend
# on any transport framework (no axum/http). The adapter keeps the stores (Arc<Mutex> persistence)
# and calls these transitions to compute the next state. See docs/plans/2026-07-01_backend-headless-core.md.
[dependencies]
# `schedule` parses routine strings + computes fire times against `NaiveDateTime`. Time math is a
# domain concern, not a transport one, so chrono belongs in the framework-agnostic core.
chrono = { version = "0.4", features = ["clock"] }
# `lifecycle` (UowStage state machine + transitions) serializes its stage/error enums; serde is a
# data concern, not a transport one.
serde = { workspace = true }
# `escalation` uses serde_json in non-test code (parse_resume_payload), so promoted from dev-dep.
serde_json = { workspace = true }
# `escalation` translate_answer_ai returns anyhow::Result from the TranslationDriver trait seam.
anyhow = { workspace = true }
# `escalation` TranslationDriver is an object-safe async trait (the seam for fake test drivers).
async-trait = { workspace = true }
# `lifecycle` transitions reference the canonical investigation shapes from the worktracker port
# crate (itself framework-agnostic — no axum).
camerata-worktracker = { path = "../worktracker" }
# `run` provenance maps enforced RuleId -> String (run_provenance); RuleId is the domain
# newtype from camerata-core, a transport-free leaf (serde/thiserror/anyhow only, no axum/rmcp).
camerata-core = { path = "../core" }
# `run` domain type `Run.tracker` is a LivenessTracker, and `stall_decision` reads its idle_ms.
# camerata-liveness is a leaf crate (tokio time only, no camerata-crate deps, no axum/rmcp).
camerata-liveness = { path = "../liveness" }
# `project` stores the fleet's per-band `TierMap` (`Project.tier_map`; `l3_model` reads
# `tier_map.balanced_primary()`). camerata-fleet is transport-free (no axum/http).
camerata-fleet = { path = "../fleet" }
# `project` stores the VCS-action gate config (`Project.process_rule_config`:
# `vcs_action::ProcessRuleConfig`). camerata-checks is transport-free (no axum/http).
camerata-checks = { path = "../checks" }

[dev-dependencies]
# `lifecycle` + `routine` tests build sample transition payloads as JSON; still needed for
# dev-only test helpers in those modules.
serde_json = { workspace = true }
# `escalation` tests use tokio::test for async driver tests.
tokio = { workspace = true, features = ["macros", "rt"] }
