[package]
name = "camerata-checks"
edition.workspace = true
license.workspace = true
authors.workspace = true
version = "0.0.0"

[lints]
workspace = true

[dependencies]
camerata-core = { path = "../core" }
camerata-rules = { path = "../rules" }
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
# Disk-headroom preflight guard before cargo builds (Decision: 2026-06-22_dogfood_disk_safety).
fs2 = { workspace = true }
