[package]
name = "camerata-checks"
edition.workspace = true
license.workspace = true
authors.workspace = true
version = "0.0.0"

[lints]
workspace = true

[dependencies]
camerata-core = { path = "../core" }
camerata-liveness = { path = "../liveness" }
camerata-rules = { path = "../rules" }
# `io-util` for AsyncBufReadExt / BufReader in the streaming subprocess path.
tokio = { workspace = true, features = ["io-util"] }
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
# Disk-headroom preflight guard before cargo builds (Decision: 2026-06-22_dogfood_disk_safety).
fs2 = { workspace = true }
# Manifest (.camerata/checks.toml) parsing (Decision: 2026-06-22_check_manifest_single_source_of_truth).
toml = "0.8"

[dev-dependencies]
# subprocess streaming tests (spawn sh to emit lines and verify heartbeat fires).
tempfile = "3"
