[package]
name = "camerata"
edition.workspace = true
version = "0.0.0"

[lints]
workspace = true

[lib]
name = "camerata"
path = "src/lib.rs"

[[bin]]
name = "camerata"
path = "src/main.rs"

[dependencies]
camerata-core = { path = "../core" }
camerata-intake = { path = "../intake" }
camerata-gateway = { path = "../gateway" }
camerata-agent = { path = "../agent" }
camerata-checks = { path = "../checks" }
camerata-rules = { path = "../rules" }
camerata-fleet = { path = "../fleet" }
anyhow.workspace = true
tokio = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
