[package]
name = "camerata"
edition.workspace = true
version = "0.0.0"

[lints]
workspace = true

[lib]
name = "camerata"
path = "src/lib.rs"

[[bin]]
name = "camerata"
path = "src/main.rs"

[dependencies]
camerata-core = { path = "../core" }
camerata-intake = { path = "../intake" }
camerata-gateway = { path = "../gateway" }
camerata-agent = { path = "../agent" }
camerata-checks = { path = "../checks" }
camerata-rules = { path = "../rules" }
camerata-fleet = { path = "../fleet" }
camerata-worktracker = { path = "../worktracker" }
camerata-maintenance = { path = "../maintenance" }
camerata-deploy = { path = "../deploy" }
anyhow.workspace = true
tokio = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
# Auto-load a gitignored .env (so `cargo run -p camerata -- worktracker-live` etc.
# pick up the GitHub token without exporting it).
dotenvy = "0.15"

[dev-dependencies]
tokio = { workspace = true }
