[package]
name = "camerata-core"
edition.workspace = true
license.workspace = true
authors.workspace = true
version = "0.0.0"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true }
# Dev-only: the end-to-end coordinator integration test drives the REAL
# layer-2 RustCheckRunner against a temp worktree. This is a dev-dependency
# cycle (checks depends on core normally); Cargo permits cycles that exist
# only through dev-dependencies, so the normal build graph stays acyclic.
camerata-checks = { path = "../checks" }
# Provider-neutrality proof: GenericCliDriver (from agent) + evaluate_call (from
# gateway) let the integration test assert that the coordinator and gateway
# operate identically regardless of which concrete driver or model is in use.
camerata-agent = { path = "../agent" }
camerata-gateway = { path = "../gateway" }
