[package]
name = "camerata-fleet"
edition.workspace = true
license.workspace = true
authors.workspace = true
version = "0.0.0"

[dependencies]
camerata-core = { path = "../core" }
camerata-agent = { path = "../agent" }
camerata-checks = { path = "../checks" }
camerata-rules = { path = "../rules" }
camerata-gateway = { path = "../gateway" }
camerata-intake = { path = "../intake" }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
