[package]
name = "camerata-fleet"
edition.workspace = true
license.workspace = true
authors.workspace = true
version = "0.0.0"

[lints]
workspace = true

[dependencies]
camerata-core = { path = "../core" }
camerata-agent = { path = "../agent" }
camerata-checks = { path = "../checks" }
camerata-rules = { path = "../rules" }
camerata-gateway = { path = "../gateway" }
camerata-intake = { path = "../intake" }
anyhow = { workspace = true }
tokio = { workspace = true }
# RAII temp-dir cleanup for per-session and per-run scaffold dirs (ARCH-RESOURCE-LIFECYCLE-1).
tempfile = "3"
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
