[package]
name = "camerata-gateway"
edition.workspace = true
license.workspace = true
authors.workspace = true
version = "0.0.0"

# This crate is the VERIFIED layer-1 governance gate (RUST_CORE_VERIFICATION.md):
# a Rust MCP server whose tools enforce the active rule-subset before executing.
# Phase 0 will: (1) implement core::GovernanceGateway over this, (2) key the
# rule-subset by session_id, (3) decide transport (stdio-subprocess vs embedded
# streamable-http so the orchestrator's live state is in-process).

[lints]
workspace = true

[lib]
name = "camerata_gateway"
path = "src/lib.rs"

[[bin]]
name = "camerata-gateway"
path = "src/main.rs"

[dependencies]
camerata-core = { path = "../core" }
camerata-rules = { path = "../rules" }
# Orchestrator-mode `delegate` tool reuses the agent crate's spawn machinery to
# launch a GATED child `claude -p` (gated_write only, delegate disabled). agent
# depends only on core + worktracker, so this adds no normal-build cycle.
camerata-agent = { path = "../agent" }
rmcp = { version = "1.7", features = ["server", "transport-io"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "1"
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
regex = "1"
sha2 = { workspace = true }
# RAII temp-dir cleanup for per-delegate session dirs (ARCH-RESOURCE-LIFECYCLE-1).
tempfile = "3"
# Structured logging (Phase H1). `tracing-subscriber` is only needed by this crate's
# `main.rs` binary entrypoint (it installs the process-global subscriber), but library
# code that wants to emit through `tracing` lives in this crate too, so both are deps.
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
