[package]
name = "camerata-maintenance"
edition.workspace = true
license.workspace = true
authors.workspace = true
version = "0.0.0"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
