[package]
name = "camerata-orchestrator-core"
edition.workspace = true
license.workspace = true
authors.workspace = true
version = "0.0.0"

# The confidence engine's effect-signature classifier (see src/lib.rs). Deliberately a
# minimal, pure crate: no tokio, no serde — `classify` is a synchronous, side-effect-free
# function so every branch is directly unit-testable. Package name is `-core` (not
# `camerata-orchestrator`, which is the repo/binary name) per the naming note in the
# root Cargo.toml.

[lints]
workspace = true

[dependencies]
# `classify` reuses the write-time gate's OWN rule arms (`lookup_arm`) and its
# git-state-mutation guard (`is_git_state_mutation`) to ground the Irreversible (C)
# triggers in the same logic the real deny-before-execute gate enforces, instead of
# re-implementing overlapping regexes that could silently drift apart. See the module
# doc in src/lib.rs.
camerata-gateway = { path = "../gateway" }
# `secrets::detect_secrets`/`scrub` (FOLD E, chat secret-interceptor): pure
# pattern-matching over free text, same crate + `OnceLock`-cached-compiled-pattern
# style `camerata-gateway`'s own SEC-* arms already use (same version, so the two
# never drift on which `regex` release they compile against). Still no tokio, no
# serde — this module stays synchronous and side-effect-free like `classify`.
regex = "1"
# `turn::handle_turn` (the orchestrator LOOP this crate's module doc calls "a
# later phase" — it drives the LLM + execution seams and records decisions).
# `classify`/`secrets` stay exactly as pure/sync as before; these deps are
# additive and used only by the new `turn`/`spec` modules. Object-safe traits
# (`#[async_trait]`) let production wire the REAL LLM/executor while tests
# inject fakes; `anyhow` gives the honest-error plumbing the no-placeholder
# rule depends on.
anyhow = { workspace = true }
async-trait = { workspace = true }
# `spec::LivingSpec` stamps change-log/assumption entries with CALLER-supplied
# timestamps (RUST-PURE-STATE-TRANSITIONS-1 — deterministic, testable), the
# same `chrono` version `camerata-worktracker`/`camerata-persistence` use.
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
# `#[tokio::test]` for `turn`'s async `handle_turn` tests. Production `handle_turn`
# is a plain `async fn` with no tokio calls of its own (the crate stays free of a
# tokio dependency in `[dependencies]`); only the test harness needs a runtime.
tokio = { workspace = true, features = ["rt", "macros"] }
