[package]
name = "camerata-persistence"
edition.workspace = true
license.workspace = true
authors.workspace = true
version = "0.0.0"

[lints]
workspace = true

[dependencies]
camerata-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
# A throwaway directory for the on-disk durability test (open_path).
tempfile = "3"
