[package]
name = "camerata-persistence"
edition.workspace = true
license.workspace = true
authors.workspace = true
version = "0.0.0"

[lints]
workspace = true

[dependencies]
camerata-core = { path = "../core" }
# `feedback.rs`'s `FeedbackStore` stores `camerata_api_types::feedback::DefectReport`
# directly (unlike the governance-event mirror pattern) — api-types is the pure-serde
# leaf at the bottom of the dependency graph, so depending on it here adds no cycle.
camerata-api-types = { path = "../api-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
# A throwaway directory for the on-disk durability test (open_path).
tempfile = "3"
