[package]
name = "camerata-rules"
edition.workspace = true
license.workspace = true
authors.workspace = true
version = "0.0.0"

[lints]
workspace = true

[dependencies]
camerata-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
toml = "0.8"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
